--- a/modules/navigation/client/css/navigation.css
+++ b/modules/navigation/client/css/navigation.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(90deg, #f70b4c, #feae81);
+    background: linear-gradient(90deg, #ff3675, #feb283);
     padding: 10px 20px;
     color: white;
 }
