--- a/modules/navigation/client/views/navigation.client.view.html
+++ b/modules/navigation/client/views/navigation.client.view.html
@@ -32,6 +32,14 @@
           <span>ที่พัก</span>
         </div>
       </a>
+
+      <a href="/resturant">
+        <div class="icon">
+          <img src="/img/icons/stall-food.png" alt="Travel Resources">
+          <span>ร้านอาหาร</span>
+        </div>
+      </a>
+
     </div>
     <div class="logo">
       <img src="/img/icons/phi-ta-khon.png" alt="Be My Travel Muse Logo">
@@ -39,10 +47,17 @@
 
     <div class="menu-icons">
 
-      <a href="/resturant">
+      <a href="/cafe">
         <div class="icon">
           <img src="/img/icons/mango.png" alt="Travel Resources">
-          <span>ร้านอาหาร</span>
+          <span>ร้านกาแฟ</span>
+        </div>
+      </a>
+
+      <a href="/travel">
+        <div class="icon">
+          <img src="/img/icons/tuk-tuk.png" alt="travel Resources">
+          <span>แนะนำเส้นทางท่องเที่ยว</span>
         </div>
       </a>
 
