--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -111,6 +111,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  margin-bottom: 150px;
 }
 
 .card {
@@ -166,8 +167,8 @@ body {
   width: 100%;
   padding: 10px;
   color: #fff;
-  background: linear-gradient(90deg, #f70b4c, #feae81);
-  /* background: #f70b4c; */
+  background: linear-gradient(90deg, #ff3976, #feb181);
+  /* background: #100e0f; */
   border-radius: 3px;
   font-size: 14px;
   text-align: center;
@@ -178,7 +179,7 @@ body {
 }
 
 .card-button:hover {
-  background-color: #feae81;
+  background-color: #ff3475;
 }
 
 
@@ -228,3 +229,27 @@ a:hover .header-profile-image {
   padding-bottom: 11px !important;
 }
 
+.main-photo {
+  width: 100%;
+  max-width: 600px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 16px;
+}
+.thumbnails {
+  display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
+}
+.thumbnail {
+  width: 100px;
+  height: 60px;
+  object-fit: cover;
+  cursor: pointer;
+  border-radius: 6px;
+  transition: transform 0.2s;
+}
+.thumbnail:hover {
+  transform: scale(1.05);
+}
