--- a/modules/form-add/client/views/form-add.client.view.html
+++ b/modules/form-add/client/views/form-add.client.view.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-sm-4" for="pname">รูปภาพประกอบ:</label>
+        <label class="control-label col-sm-4" for="pname">รูปภาพประกอบหลัก:</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" id="imgfeatured" name="imgfeatured">
         </div>
@@ -169,6 +169,75 @@
           <input type="text" class="form-control" id="paudio" name="paudio">
         </div>
       </div> -->
+
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="paudio">ไฟล์วิดิโอ:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="pvideo" name="pvideo">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo1">รูปภาพประกอบที่ 1:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo1" name="photo1">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo2">รูปภาพประกอบที่ 2:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo2" name="photo2">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo3">รูปภาพประกอบที่ 3:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo3" name="photo3">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo4">รูปภาพประกอบที่ 4:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo4" name="photo4">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo5">รูปภาพประกอบที่ 5:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo5" name="photo5">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo6">รูปภาพประกอบที่ 6:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo6" name="photo6">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo7">รูปภาพประกอบที่ 7:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo7" name="photo7">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo8">รูปภาพประกอบที่ 8:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo8" name="photo8">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo9">รูปภาพประกอบที่ 9:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo9" name="photo9">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-4" for="photo10">รูปภาพประกอบที่ 10:</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="photo10" name="photo10">
+        </div>
+      </div>
+
       <div class="form-group">
         <label class="control-label col-sm-4" for="pextrasource">คะแนน:</label>
         <div class="col-sm-8">
