--- a/modules/map/client/views/map.client.view.html
+++ b/modules/map/client/views/map.client.view.html
@@ -12,19 +12,19 @@
         <div class="form-group">
           <label for="exampleInputPassword1">จังหวัด</label>
           <select class="form-control" id="province_selector">
-            <option value="9999">ทั้งหมด</option>
+            <option value="">ทั้งหมด</option>
           </select>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">อำเภอ</label>
           <select class="form-control" id="city_selector">
-            <option value="9999">ทั้งหมด</option>
+            <option value="">ทั้งหมด</option>
           </select>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">ตำบล</label>
           <select class="form-control" id="township_selector">
-            <option value="9999">ทั้งหมด</option>
+            <option value="">ทั้งหมด</option>
           </select>
         </div>
         <div class="form-group">
