--- a/modules/map/client/views/map.client.view.html
+++ b/modules/map/client/views/map.client.view.html
@@ -29,7 +29,7 @@
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">ประเภทของสถานที่</label>
-          <select class="form-control" id="type_selector">
+          <select class="form-control" id="ptype_selector">
             <option value="9999">ทั้งหมด</option>
           </select>
         </div>
