--- a/modules/navigation/client/views/navigation.client.view.html
+++ b/modules/navigation/client/views/navigation.client.view.html
@@ -2,13 +2,12 @@
   <!-- Top navigation bar -->
   <div class="top-nav">
     <div class="website-name">
-      <div class="">I-Laa Kha-La</div>
+      <div class="">ilaakhalao</div>
       <a href="#">The Elevated Wellness Tourism of Isaan with Digital Platform</a>
     </div>
     <div class="nav-menu">
       <div class="nav-links">
         <a href="/home">หน้าแรก</a>
-        <a href="#">เกี่ยวกับ</a>
         <a href="/data-management">ระบบการจัดการข้อมูล</a>
       </div>
       <!-- <div class="search">
