--- a/modules/form-add/client/views/form-add.client.view.html
+++ b/modules/form-add/client/views/form-add.client.view.html
@@ -76,25 +76,25 @@
           <input type="text" class="form-control" id="pentranfee" name="pentranfee" required>
         </div>
       </div>
-      <div class="form-group" id="input-shop">
+      <div class="form-group hide" id="input-shop">
         <label class="control-label col-sm-4" for="pshop">ร้านค้าสวัสดิการ:</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" id="pshop" name="pshop" required>
         </div>
       </div>
-      <div class="form-group" id="input-cellular">
+      <div class="form-group hide" id="input-cellular">
         <label class="control-label col-sm-4" for="pcell">สัญญาณโทรศัพท์:</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" id="pcell" name="pcell" required>
         </div>
       </div>
-      <div class="form-group" id="input-agency">
+      <div class="form-group hide" id="input-agency">
         <label class="control-label col-sm-4" for="pagency">หน่วยงานที่เกี่ยวข้อง:</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" id="pagency" name="pagency" required>
         </div>
       </div>
-      <div class="form-group" id="input-agency">
+      <div class="form-group hide" id="input-agency">
         <label class="control-label col-sm-4" for="facilities_selects">สิ่งอำนวยความสะดวก:</label>
         <div class="col-sm-8">
           <select class="js-example-basic-multiple" id="facilities_selects" name="facilities_selects[]"
@@ -119,7 +119,7 @@
         </div>
       </div>
 
-      <div class="form-group" id="input-agency">
+      <div class="form-group hide" id="input-agency">
         <label class="control-label col-sm-4" for="pfacilities">สิ่งอำนวยความสะดวก เพิ่มเติม:</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" id="pfacilities" name="pfacilities" required>
@@ -139,13 +139,15 @@
           <input type="text" class="form-control" id="pcontact" name="pcontact" required>
         </div>
       </div>
+
       <div class="form-group">
         <label class="control-label col-sm-4" for="pmap">แผนที่:</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" id="pmap" name="pmap" required>
         </div>
       </div>
-      <div class="form-group">
+      
+      <div class="form-group hide">
         <label class="control-label col-sm-4" for="pphotosource">ที่มาของรูป:</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" id="pphotosource" name="pphotosource" required>
@@ -157,12 +159,13 @@
           <input type="text" class="form-control" id="pinfosource" name="pinfosource" required>
         </div>
       </div>
-      <div class="form-group">
+      <div class="form-group hide">
         <label class="control-label col-sm-4" for="pextrasource">ลิงค์ใส่รูปเพิ่มเติม:</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" id="pextrasource" name="pextrasource" required>
         </div>
       </div>
+
       <!-- <div class="form-group">
         <label class="control-label col-sm-4" for="paudio">ไฟล์เสียง:</label>
         <div class="col-sm-8">
@@ -225,12 +228,14 @@
           <input type="text" class="form-control" id="photo8" name="photo8">
         </div>
       </div>
+
       <div class="form-group">
         <label class="control-label col-sm-4" for="photo9">รูปภาพประกอบที่ 9:</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" id="photo9" name="photo9">
         </div>
       </div>
+
       <div class="form-group">
         <label class="control-label col-sm-4" for="photo10">รูปภาพประกอบที่ 10:</label>
         <div class="col-sm-8">
@@ -238,7 +243,7 @@
         </div>
       </div>
 
-      <div class="form-group">
+      <div class="form-group hide">
         <label class="control-label col-sm-4" for="pextrasource">คะแนน:</label>
         <div class="col-sm-8">
           <select type="text" class="form-control" id="rating" name="rating" required>
@@ -250,6 +255,7 @@
           </select>
         </div>
       </div>
+
       <br>
       <hr>
       <div class="form-group text-center">
