--- a/modules/form-edit/client/views/form-edit.client.view.html
+++ b/modules/form-edit/client/views/form-edit.client.view.html
@@ -71,32 +71,32 @@
         <input type="text" class="form-control" id="pdesc"  name="pdesc">
       </div>
     </div>
-    <div class="form-group" id="input-entrance_fee">
+    <div class="form-group hide" id="input-entrance_fee">
       <label class="control-label col-sm-4" for="pentranfee">อัตราค่าบริการ:</label>
       <div class="col-sm-8">
         <input type="text" class="form-control" id="pentranfee"  name="pentranfee">
       </div>
     </div>
-    <div class="form-group" id="input-shop">
+    <div class="form-group hide" id="input-shop">
       <label class="control-label col-sm-4" for="pshop">ร้านค้าสวัสดิการ:</label>
       <div class="col-sm-8">
         <input type="text" class="form-control" id="pshop"  name="pshop">
       </div>
     </div>
-    <div class="form-group" id="input-cellular">
+    <div class="form-group hide" id="input-cellular">
       <label class="control-label col-sm-4" for="pcell">สัญญาณโทรศัพท์:</label>
       <div class="col-sm-8">
         <input type="text" class="form-control" id="pcell"  name="pcell">
       </div>
     </div>
-    <div class="form-group" id="input-agency">
+    <div class="form-group hide" id="input-agency">
       <label class="control-label col-sm-4" for="pagency">หน่วยงานที่เกี่ยวข้อง:</label>
       <div class="col-sm-8">
         <input type="text" class="form-control" id="pagency"  name="pagency">
       </div>
     </div>
 
-    <div class="form-group" id="input-agency">
+    <div class="form-group hide" id="input-agency">
       <label class="control-label col-sm-4" for="facilities_selects">สิ่งอำนวยความสะดวก:</label>
       <div class="col-sm-8">
         <select class="js-example-basic-multiple" id="facilities_selects" name="facilities_selects[]" multiple="multiple" style="width: 100%;" required>
@@ -119,7 +119,7 @@
       </div>
     </div>
 
-    <div class="form-group" id="input-agency">
+    <div class="form-group hide" id="input-agency">
       <label class="control-label col-sm-4" for="pfacilities">สิ่งอำนวยความสะดวก:</label>
       <div class="col-sm-8">
         <input type="text" class="form-control" id="pfacilities"  name="pfacilities">
@@ -157,7 +157,7 @@
         <input type="text" class="form-control" id="pinfosource"  name="pinfosource">
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group hide">
       <label class="control-label col-sm-4" for="pextrasource">ลิงค์ใส่รูปเพิ่มเติม:</label>
       <div class="col-sm-8">
         <input type="text" class="form-control" id="pextrasource"  name="pextrasource">
@@ -238,7 +238,7 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group hide">
       <label class="control-label col-sm-4" for="pextrasource">คะแนน:</label>
       <div class="col-sm-8">
         <select type="text" class="form-control" id="prating" name="prating">
