--- a/modules/map/client/css/map.css
+++ b/modules/map/client/css/map.css
@@ -256,9 +256,9 @@ label {
 }
 
 .control-panel {
-  bottom:40%;
-  left: 10px;
-  width: 38px;
+  top:1%;
+  left: 40px;
+  width: 35px;
 }
 
 .control-panel ul {
@@ -281,60 +281,66 @@ label {
     display: -ms-flexbox;
     display: flex;
     height: 30px;
-    width: 30px;
+    width: 40px;
 }
 
-
 .control-layer {
-    bottom: 15%;
-    left: 10px;
-    width: 38px;
+  position: absolute;
+  bottom: 12%;
+  max-width: 80px;
+  /* left: 10px; */
+  z-index: 999;
 }
 
 .control-layer ul {
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  gap: 5px;
+  flex-direction: column;
 }
 
 .control-layer li {
-    border-radius: 25px;
-    box-sizing: border-box;
-    margin-bottom: 7px;
-    background: rgb(0,0,0,.5);
-    color: #FFF;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 30px;
-    width: auto;
-    padding-right: 20px;
-    padding-left: 10px;
+  border-radius: 25px;
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  padding: 2px 2px;
+  height: 20px;
+  font-size: 10px;
+  transition: background 0.3s, color 0.3s;
+  cursor: pointer;
 }
 
-.control-layer li span{
-    font-size: 12px;
-    margin-top: 4px;
-    font-weight: 400;
+.control-layer li span {
+  font-weight: 400;
+  margin-left: 5px;
 }
 
-.pointer {
-    cursor: pointer;
+.control-layer li.active {
+  background: #fff;
+  color: #100e0f;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-.control-layer li.active{
-  background: #FFF;
-  color:  #100e0f;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
+/* Optional icon styling */
+.panel-icon {
+  width: 14px;
+  height: 14px;
+  fill: currentColor; /* Uses text color */
+  display: inline-block;
 }
 
-.control-layer li.active .panel-icon{
-  fill: linear-gradient(90deg, #100e0f, #ff3475);
+/* If you want to override icon color on active */
+.control-layer li.active .panel-icon {
+  fill: #ff3475; /* Example solid color; linear-gradient doesn't work directly here */
 }
+
+
 .panel-icon {
     fill: #FFF;
     display: block;
@@ -427,4 +433,13 @@ label {
 .mapboxgl-popup-content {
   text-align: center;
   font-family: 'kanit', sans-serif;
+}
+
+.marker-color {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin-right: 1px;
+  vertical-align: middle;
 }
