--- a/modules/navigation/client/views/navigation.client.view.html
+++ b/modules/navigation/client/views/navigation.client.view.html
@@ -56,7 +56,7 @@
       <a href="/travel">
         <div class="icon">
           <img src="/img/icons/tuk-tuk.png" alt="travel Resources">
-          <span>แนะนำเส้นทางท่องเที่ยว</span>
+          <span>วางแผนการเดินทาง</span>
         </div>
       </a>
 
