--- a/modules/footer/client/views/footer.client.view.html
+++ b/modules/footer/client/views/footer.client.view.html
@@ -6,6 +6,7 @@
           <img src="img/mhes.png" alt="mhes">
 
       </div>
-      <p>&copy; 2025 Your Company Name. All Rights Reserved.</p>
+      <p style="margin-bottom: 1px;">&copy; 2025 Your Company Name. All Rights Reserved.</p>
+      <p>icons designed by <a href="www.freepik.com">Freepik</a></p>
   </div>
 </footer>
