--- a/modules/map/client/views/map.client.view.html
+++ b/modules/map/client/views/map.client.view.html
@@ -110,7 +110,7 @@
           </ul>
         </div>
 
-        <div class="control-layer map-component" style="left: 120px;">
+        <div class="control-layer map-component" style="left: 40px;">
           <div class="scalebar-container"></div>
           <ul>
             <li class="pointer active" id="streets-v11">
@@ -156,7 +156,7 @@
           </ul>
         </div>
 
-        <div class="control-layer map-component" style="left: 40px;">
+        <!-- <div class="control-layer map-component" style="left: 40px;">
           <div class="scalebar-container"></div>
           <ul>
             <li class="pointer" id="waterfall" data-layer-id="waterfall" data-file="/data/waterfall_isaan.geojson" data-color="#007cbf">
@@ -167,7 +167,7 @@
               <span class="marker-color" style="background-color: #bc9e09;"></span>
               <span>วัด</span>
             </li>
-            <li class="pointer" id="samnaksong" data-layer-id="samnaksong" data-file="/data/samnaksong_isaan.geojson" data-color="#bfb500">
+            <li class="pointer" id="samnaksong" data-layer-id="samnaksong" data-file="/data/samnaksong.geojson" data-color="#bfb500">
               <span class="marker-color" style="background-color: #bfb500;"></span>
               <span>สำนักสงฆ์</span>
             </li>
@@ -224,7 +224,7 @@
               <span>ชายหาด</span>
             </li>
           </ul>
-        </div>
+        </div> -->
 
       </div>
       <div class="branding">
