--- a/modules/travel/client/views/travel.client.view.html
+++ b/modules/travel/client/views/travel.client.view.html
@@ -13,7 +13,7 @@
       <div ng-bind-html="trustedDestinationsHtml"></div>
     </div>
 
-    <div class="control-layer map-component" style="left: 20px;">
+    <!-- <div class="control-layer map-component" style="left: 20px;">
       <div class="scalebar-container"></div>
       <ul>
         <li class="pointer" id="waterfall" data-layer-id="waterfall" data-file="/data/waterfall_isaan.geojson" data-color="#007cbf">
@@ -81,7 +81,7 @@
           <span>ชายหาด</span>
         </li>
       </ul>
-    </div>
+    </div> -->
     
   </div>
 </section>
