--- a/modules/navigation/client/views/navigation.client.view.html
+++ b/modules/navigation/client/views/navigation.client.view.html
@@ -3,7 +3,7 @@
   <div class="top-nav">
     <div class="website-name">
       <div class="">ilaakhalao</div>
-      <a href="#">The Elevated Wellness Tourism of Isaan with Digital Platform</a>
+      <!-- <a href="#">The Elevated Wellness Tourism of Isaan with Digital Platform</a> -->
     </div>
     <div class="nav-menu">
       <div class="nav-links">
@@ -21,14 +21,14 @@
       <a href="/tourism">
         <div class="icon">
           <img src="/img/icons/doi-suthep.png" alt="Destinations">
-          <span>สถานที่ท่องเที่ยว</span>
+          <span>ท่องเที่ยวเชิงสุขภาพเชิงสุขภาพ</span>
         </div>
       </a>
 
-      <a href="/hotel">
+      <a href="/tourism3">
         <div class="icon">
           <img src="/img/icons/house.png" alt="Off the Beaten Path">
-          <span>ที่พัก</span>
+          <span>ท่องเที่ยวเชิงการแพทย์</span>
         </div>
       </a>
 
@@ -46,12 +46,12 @@
 
     <div class="menu-icons">
 
-      <a href="/cafe">
+      <!-- <a href="/cafe">
         <div class="icon">
           <img src="/img/icons/mango.png" alt="Travel Resources">
           <span>ร้านกาแฟ</span>
         </div>
-      </a>
+      </a> -->
 
       <a href="/travel">
         <div class="icon">
@@ -66,6 +66,14 @@
           <span>แผนที่สถานที่ท่องเที่ยว</span>
         </div>
       </a>
+
+      <a href="/about">
+        <div class="icon">
+          <img src="/img/icons/pagoda.png" alt="about ilaakhalao">
+          <span>เกี่ยวกับเรา</span>
+        </div>
+      </a>
+
     </div>
   </nav>
 </header>
