--- a/modules/tourism3/client/views/tourism3.client.view.html
+++ b/modules/tourism3/client/views/tourism3.client.view.html
@@ -1,6 +1,6 @@
 <div ui-view="nav"></div>
-<section class="card-section" ng-controller="hotelCtrl">
-  <h1 class="section-title">ที่พัก</h1>
+<section class="card-section" ng-controller="tourism3Ctrl">
+  <h1 class="section-title">การท่องเที่ยวเชิงการแพทย์</h1>
   <p class="section-subtitle">Explore the best hotel in the region</p>
   <div class="card-container" id="cards"></div>
 </section>
