--- a/modules/tourism/client/views/tourism.client.view.html
+++ b/modules/tourism/client/views/tourism.client.view.html
@@ -1,7 +1,7 @@
 <div ui-view="nav"></div>
 
 <section class="card-section" ng-controller="tourismCtrl">
-  <h1 class="section-title">สถานที่ท่องเที่ยว</h1>
+  <h1 class="section-title">การท่องเที่ยวเชิงสุขภาพเชิงสุขภาพ</h1>
   <p class="section-subtitle">Explore the best spots in the region</p>
   <div class="card-container" id="cards"></div>
 </section>
