--- a/modules/navigation/client/views/navigation.client.view.html
+++ b/modules/navigation/client/views/navigation.client.view.html
@@ -21,7 +21,7 @@
       <a href="/tourism">
         <div class="icon">
           <img src="/img/icons/doi-suthep.png" alt="Destinations">
-          <span>ท่องเที่ยวเชิงสุขภาพเชิงสุขภาพ</span>
+          <span>ท่องเที่ยวเชิงสุขภาพ</span>
         </div>
       </a>
 
