--- a/modules/tourism/client/views/tourism.client.view.html
+++ b/modules/tourism/client/views/tourism.client.view.html
@@ -1,9 +1,10 @@
 <div ui-view="nav"></div>
 
 <section class="card-section" ng-controller="tourismCtrl">
-  <h1 class="section-title">การท่องเที่ยวเชิงสุขภาพเชิงสุขภาพ</h1>
+  <h1 class="section-title">การท่องเที่ยวเชิงสุขภาพ</h1>
   <p class="section-subtitle">Explore the best spots in the region</p>
   <div class="card-container" id="cards"></div>
+  <div id="pager" class="pager"></div>
 </section>
 
 <div ui-view="footer"></div>
