--- a/modules/resturant/client/views/resturant.client.view.html
+++ b/modules/resturant/client/views/resturant.client.view.html
@@ -3,5 +3,6 @@
   <h1 class="section-title">ร้านอาหาร</h1>
   <p class="section-subtitle">Explore the best resturant in the region</p>
   <div class="card-container" id="cards"></div>
+  <div id="pager" class="pager"></div>
 </section>
 <div ui-view="footer"></div>
