--- a/modules/tourism3/client/views/tourism3.client.view.html
+++ b/modules/tourism3/client/views/tourism3.client.view.html
@@ -3,5 +3,6 @@
   <h1 class="section-title">การท่องเที่ยวเชิงการแพทย์</h1>
   <p class="section-subtitle">Explore the best hotel in the region</p>
   <div class="card-container" id="cards"></div>
+  <div id="pager" class="pager"></div>
 </section>
 <div ui-view="footer"></div>
